# retreat

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: rss_feeds.txt
example_data/: basic_example_rss_feeds.txt  bt3dfWpa.rss  bt3dfWpa_example.rss  example_feeds.txt
retreat_go/: core_model.go  go.mod  go.sum  keymaps.go  main.go  styles.go  test_rss_feed.go
retreat_go/database/: sqlite_interface.go
retreat_go/rss_parcer/: article_requests.go  core_parcer.go  rss_parcer_test.go
retreat_python/: main.py  setup.py
retreat_python/database/: get_feeds.py
retreat_python/feed_parsers/: processing_feeds.py
retreat_python/tests/: test_querying_articles.py  testing_feed_extraction.py  text_article_content.html
retreat_server/: cli.py  requirements.tx  setup.py
retreat_server/retreat_server/database/: get_feeds.py  s3.py  setup.py
retreat_server/retreat_server/feed_parsers/: article_content_extraction.py  processing_feeds.py
retreat_server/tests/: testing_playwright.py
src/: main.rs
