[package]
name = "retreat"
version = "0.1.0"
description = "A simple content aggregator written in Rust"
authors = ["matthewteelucksingh <teelucksingh.matthew1@gmail.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0.28.1"
ratatui = "0.29.0"
color-eyre = "0.6.3"
rss = "2.0.12"
reqwest = { version = "0.12.20", features = ["blocking"] }
dom_smoothie = "0.11.0"
dom_query = "0.19.1"
clap = { version = "4.5.40", features = ["derive"] }
